# mangatra

./: Cargo.toml  Dockerfile  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
proto/: messages.proto  service.proto
src/: config.rs  detection.rs  handlers.rs  lib.rs  main.rs  ocr.rs  old_main.rs  replacer.rs  server.rs  translation.rs
src/utils/: image_conversion.rs  mod.rs  validation.rs
src/web/: error.rs  http_routes.rs  hybrid_service.rs  mod.rs  server.rs  state.rs
tests/: argument_parse.rs  util.rs
