[package]
name = "MangaMorph"
authors = ["Ethan Lau"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = "0.74.2"
anyhow = "1.0.68"
ndarray = "0.15.6"
leptess = "0.13.4"
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
serde = { versions = "1.0.151", features = ["derive"] }
image = "0.24.5"
imageproc = "0.23.0"
rusttype = "0.9.3"