[package]
name = "mangatra"
authors = ["Ethan Lau"]
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "Mangatra"

[dependencies]
opencv = "0.74.2"
anyhow = "1.0.68"
ndarray = "0.15.6"
leptess = "0.13.4"
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
serde = { versions = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
image = "0.24.5"
imageproc = "0.23.0"
rusttype = "0.9.3"
clap = { version = "4.0.32", features = ["derive"] }
rust-ini = "0.18.0"
rayon = "1.6.1"

[dev-dependencies]
assert_cmd = "2.0.7"
tempfile = "3.3.0"
once_cell = "1.17.0"