[package]
name = "mangatra"
authors = ["Ethan Lau"]
version = "0.1.0"
edition = "2021"

[features]
debug = []

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "mangatra"

[profile.release]
debug = true

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
opencv = "0.80.0"
anyhow = { version = "1.0.68", features = ["backtrace"] }
ndarray = "0.15.6"
leptess = "0.14.0"
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
serde = { versions = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
image = "0.24.5"
imageproc = "0.23.0"
rusttype = "0.9.3"
clap = { version = "4.0.32", features = ["derive"] }
rust-ini = "0.18.0"
rayon = "1.6.1"
indicatif = { version = "0.17.3", features = ["rayon"] }
globwalk = "0.8.1"
itertools = "0.10.5"
indexmap = { version = "1.9.3", features = ["serde"] }
axum = "0.7.2"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0.7"
tempfile = "3.3.0"
once_cell = "1.17.0"
